--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   fluttertoast: ^8.2.5
   flutter_secure_storage: ^9.0.0
   flutter_dotenv: ^5.1.0
+  mobile_scanner: ^4.0.0
+  google_mlkit_text_recognition: ^0.11.0
+  image: ^4.1.7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -44,6 +47,19 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.4.0
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/tsa.jpeg"
+
+flutter_native_splash:
+  color: "#FFFFFF"
+  image: assets/images/tsa.jpeg
+  android: true
+  ios: true
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
